// Vitest Snapshot v1

exports[`<JobStatusIcon /> > should render when [pad=%p] false > and [state=%p] cancelled 1`] = `
<styled.div
  pad={false}
>
  <JobStateIcon
    state="cancelled"
  />
  <span>
    Cancelled
  </span>
</styled.div>
`;

exports[`<JobStatusIcon /> > should render when [pad=%p] false > and [state=%p] complete 1`] = `
<styled.div
  pad={false}
>
  <JobStateIcon
    state="complete"
  />
  <span>
    Complete
  </span>
</styled.div>
`;

exports[`<JobStatusIcon /> > should render when [pad=%p] false > and [state=%p] error 1`] = `
<styled.div
  pad={false}
>
  <JobStateIcon
    state="error"
  />
  <span>
    Error
  </span>
</styled.div>
`;

exports[`<JobStatusIcon /> > should render when [pad=%p] false > and [state=%p] preparing 1`] = `
<styled.div
  pad={false}
>
  <Loader
    color="blue"
    size="14px"
  />
  <span>
    Preparing
  </span>
</styled.div>
`;

exports[`<JobStatusIcon /> > should render when [pad=%p] false > and [state=%p] running 1`] = `
<styled.div
  pad={false}
>
  <Loader
    color="blue"
    size="14px"
  />
  <span>
    Running
  </span>
</styled.div>
`;

exports[`<JobStatusIcon /> > should render when [pad=%p] false > and [state=%p] waiting 1`] = `
<styled.div
  pad={false}
>
  <JobStateIcon
    state="waiting"
  />
  <span>
    Waiting
  </span>
</styled.div>
`;

exports[`<JobStatusIcon /> > should render when [pad=%p] true > and [state=%p] cancelled 1`] = `
<styled.div
  pad={true}
>
  <JobStateIcon
    state="cancelled"
  />
  <span>
    Cancelled
  </span>
</styled.div>
`;

exports[`<JobStatusIcon /> > should render when [pad=%p] true > and [state=%p] complete 1`] = `
<styled.div
  pad={true}
>
  <JobStateIcon
    state="complete"
  />
  <span>
    Complete
  </span>
</styled.div>
`;

exports[`<JobStatusIcon /> > should render when [pad=%p] true > and [state=%p] error 1`] = `
<styled.div
  pad={true}
>
  <JobStateIcon
    state="error"
  />
  <span>
    Error
  </span>
</styled.div>
`;

exports[`<JobStatusIcon /> > should render when [pad=%p] true > and [state=%p] preparing 1`] = `
<styled.div
  pad={true}
>
  <Loader
    color="blue"
    size="14px"
  />
  <span>
    Preparing
  </span>
</styled.div>
`;

exports[`<JobStatusIcon /> > should render when [pad=%p] true > and [state=%p] running 1`] = `
<styled.div
  pad={true}
>
  <Loader
    color="blue"
    size="14px"
  />
  <span>
    Running
  </span>
</styled.div>
`;

exports[`<JobStatusIcon /> > should render when [pad=%p] true > and [state=%p] waiting 1`] = `
<styled.div
  pad={true}
>
  <JobStateIcon
    state="waiting"
  />
  <span>
    Waiting
  </span>
</styled.div>
`;
